Added discovery server application.properties  configuration